<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    /**
    这是 topbar
    精选 和专题          二级标题
    */
    <RadioGroup
        android:id="@+id/RadioGroup_top_bar"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:background="@drawable/tab_menu_bg"
        android:orientation="horizontal"
        android:layout_height="56dp">
        <RadioButton
            android:id="@+id/top_topic"
            style="@style/tab_menu_item"
            android:text="@string/top_topic"
            />
        <RadioButton
            android:id="@+id/top_sift"
            style="@style/tab_menu_item"
            android:text="@string/top_sift"
            />
    </RadioGroup>
    /**
    三级标题
    */
    <RadioGroup
        android:id="@+id/RadioGroup_middle_bar"
        android:layout_width="match_parent"
        android:layout_below="@id/RadioGroup_top_bar"
        android:background="@drawable/tab_menu_bg"
        android:orientation="horizontal"
        android:layout_height="56dp">
        <RadioButton
            android:id="@+id/middle_view"
            style="@style/tab_menu_item"
            android:text="@string/middle_view"
            />
        <RadioButton
            android:id="@+id/middle_light"
            style="@style/tab_menu_item"
            android:text="@string/middle_light"
            />
        <RadioButton
            android:id="@+id/middle_guide"
            style="@style/tab_menu_item"
            android:text="@string/middle_guide"
            />
    </RadioGroup>
    /**
    一级标题
    */
    <RadioGroup
        android:id="@+id/RadioGroup_bottom_bar"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@drawable/tab_menu_bg"
        android:orientation="horizontal"
        android:layout_height="56dp">
        <RadioButton
            android:id="@+id/Radio_mainPage"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/mainpage"
            android:text="@string/Radio_mainPage"
            />
        <RadioButton
            android:id="@+id/Radio_foot"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/foot"
            android:text="@string/Radio_foot"
            />
        <RadioButton
            android:id="@+id/Radio_mine"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/mine"
            android:text="@string/Radio_mine"
            />
    </RadioGroup>
</RelativeLayout>
